GNOME Bugzilla – Bug 671659
[3.3.18] generates too many scroll events with a delta of 0
Last modified: 2012-03-09 03:37:16 UTC
Using gtk 3.3.18 scrolling with an usb mouse scroll wheel seems to "skip" events (i.e sometimes scrolling doesn't happen when the wheel turns) Using GDK_DEBUG=events to get info it seems quite some scroll events are generated with a delta of 0, not sure if that's the cause of the issue though
i.e log has "Gdk-Message: configure notify: window: 37748847 x,y: 331 793 w,h: 21 68 b-w: 0 above: 19204272 ovr: 1 Gdk-Message: smooth scroll: window 37748739 deltas: 0,000000 0,000000 Gdk-Message: unmap notify: window: 37748847 Gdk-Message: property notify: window: 37748739, atom(350): "_NET_WM_USER_TIME" Gdk-Message: smooth scroll: window 37748739 deltas: 0,000000 0,000000 Gdk-Message: property notify: window: 37748739, atom(350): "_NET_WM_USER_TIME" Gdk-Message: smooth scroll: window 37748739 deltas: 0,000000 0,000000 Gdk-Message: property notify: window: 37748739, atom(350): "_NET_WM_USER_TIME" Gdk-Message: smooth scroll: window 37748739 deltas: 0,000000 0,000000 ..."
The following fix has been pushed: 9d16886 xi2: Don't reset scroll valuators too often
Created attachment 209297 [details] [review] xi2: Don't reset scroll valuators too often According to XInput gurus, a motion event without valuators does not invalidate the stored value, so we should keep it.